--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          
+      - name: Clear all caches
+        run: |
+          rm -rf node_modules
+          rm -rf ~/.npm
+          rm -rf dist
           
       - name: Install dependencies
         run: npm ci
         
-      - name: Build
-        run: npm run build
+      - name: Build with cache busting
+        run: |
+          npm run build
+          echo "Build completed at $(date)" >> dist/build-info.txt
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
